[package]
name = "communication_hub"
version = "0.1.0"
edition = "2021"  # or "2024", doesn’t matter for this feature

[dependencies]
tokio   = { version = "1.28", features = ["full"] }
tokio-modbus = { version = "0.5", features = ["sync"] }
tonic   = "0.9"
prost   = "0.11"


[build-dependencies]
tonic-build = { version = "0.9", build-dependencies = true }

[[bin]]
name = "main"                   # the binary’s name
path = "src/main.rs"           # where to find its entry point

[[bin]]
name = "grpc_server"             # second binary’s name
path = "src/grpc_comm.rs"

[[bin]]
name = "grpc_client"             # second binary’s name
path = "src/client.rs"
